Improved pagination, introduced gaps. Resolves #2

--- a/src/main/resources/static/css/seniorcommander.css
+++ b/src/main/resources/static/css/seniorcommander.css
@@ -44,5 +44,8 @@ h1#brand{color:#c3c3c3; margin-top:0; padding:14px 0; font-size:18px; text-align
 /* Betting */
 .betting-option {font-weight:bold;}
 
+/* Grid */
+li.pagination-break {position:relative; float:left; padding:6px 12px; margin-left:-1px;}
+
 /* Forms */
 form p.bg-success, form p.bg-warning { padding:15px; }
